{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 16,
  "lineage": "63d51356-b399-2bcb-9da2-a02b92777db7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb5f4bcb-a32d-41c2-b740-0b162b94c25c/resourceGroups/devlopment_rg/providers/Microsoft.Network/networkSecurityGroups/applicationSecurityGroup",
            "location": "eastus",
            "name": "applicationSecurityGroup",
            "resource_group_name": "devlopment_rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.dev_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "SG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/eb5f4bcb-a32d-41c2-b740-0b162b94c25c/resourceGroups/devlopment_rg/providers/Microsoft.Network/networkSecurityGroups/applicationSecurityGroup/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "applicationSecurityGroup",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devlopment_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.app_security_group",
            "azurerm_resource_group.dev_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "app-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "aad0a410-3845-4a14-9e25-5d69ccc511d7",
            "id": "/subscriptions/eb5f4bcb-a32d-41c2-b740-0b162b94c25c/resourceGroups/devlopment_rg/providers/Microsoft.Network/virtualNetworks/application-network",
            "location": "eastus",
            "name": "application-network",
            "resource_group_name": "devlopment_rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/eb5f4bcb-a32d-41c2-b740-0b162b94c25c/resourceGroups/devlopment_rg/providers/Microsoft.Network/virtualNetworks/application-network/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.dev_rg"
          ]
        }
      ]
    }
  ]
}